# todo-app-cpp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: devcontainer.json
docker/: Dockerfile
src/: main.cpp
src/controllers/: auth_controller.cpp  auth_controller.hpp  todo_controller.hpp
src/database/: database.cpp  database.hpp
src/middleware/: auth_middleware.hpp
src/models/: todo.hpp  user.hpp
src/repositories/: todo_repository.cpp  todo_repository.hpp  user_repository.cpp  user_repository.hpp
src/services/: auth_service.cpp  auth_service.hpp
src/templates/: hello.html  hello_name.html
src/utils/: hashing.cpp  hashing.hpp  uuid.cpp  uuid.hpp
